--- a/Capstone_BattleOfNeighborhoods_04_Report.ipynb
+++ b/Capstone_BattleOfNeighborhoods_04_Report.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "<br><br> <a name=\"introduction\"></a><hr><br>\n",
-    "<font size=\"6\"><b><u>Introduction:</b></u></font>\n",
+    "## <b><u>Introduction:</b></u> \n",
     "<br><br>\n",
     "Our clients are a Travel Consultants seeking a recommender system for the most optimum area of stay and alist of Hotels. This result will be based on a number of parameters (points of interest) the customers are seeking. These parameters could be anything from a specific restaurant, Gym, Bakery, Museums, Zoo, areas of shopping and so on.\n",
     "\n",
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "<br><br><a name=\"data\"></a><hr><br>\n",
-    "<font size=\"6\"><b><u>Data Setup:</b></u></font> \n",
+    "## <b><u>Data Setup:</b></u>\n",
     "<br><br>\n",
     "Since the requirements were general and applied to the entire city of London, we did not seek any specific data from the client to work upon. We made use of this Wikipedia page to fetch a list of all neighborhoods in the city ...\n",
     "\n",
@@ -92,7 +92,7 @@
    "metadata": {},
    "source": [
     "<br><br><a name=\"methodology\"></a><hr><br>\n",
-    "<font size=\"6\"><b><u>Methodology:</b></u></font>\n",
+    "## <b><u>Methodology:</b></u>\n",
     "<br><br>\n",
     "We assigned a list of parameters and worked through them on the list of neigborhoods generated through the Foursquare API. \n",
     "\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "<br><br><a name=\"results\"></a><hr><br>\n",
-    "<font size=\"6\"><b><u>Results:</b></u></font> \n",
+    "## <b><u>Results:</b></u>\n",
     "<br><br>\n"
    ]
   },
@@ -166,7 +166,7 @@
    "metadata": {},
    "source": [
     "<br><br><a name=\"discussion\"></a><hr><br>\n",
-    "<font size=\"6\"><b><u>Discussion:</b></u></font> \n",
+    "## <b><u>Discussion:</b></u></font> \n",
     "<br><br>\n",
     "\n",
     "The results were presented to the clients with a training on how the presentation can be run. \n",
@@ -179,7 +179,7 @@
    "metadata": {},
    "source": [
     "<br><br><a name=\"conclusion\"></a><hr><br>\n",
-    "<font size=\"6\"><b><u>Conclusion:</b></u></font> \n",
+    "## <b><u>Conclusion:</b></u>\n",
     "<br><br>\n",
     "\n",
     "A detailed visual representation (by means of results, maps and graphs) were presented to the clients. The results indicated the optimum areas and list of Hotels for the customers based on their reqirements. The clients have accepted our proposal and the model will be implemented.\n"
