--- a/Capstone_BattleOfNeighborhoods_05Presentation.ipynb
+++ b/Capstone_BattleOfNeighborhoods_05Presentation.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "source": [
     "<br><br><a name=\"methodology\"></a><hr><br>\n",
-    "<font size=\"6\"><p style=\"text-align:center;\"><b>Optimum points of interests & Venues <br><br>\n",
-    "    Data Analysis of London</b></p></font>\n",
+    "<p style=\"text-align:center;\"><b>Optimum points of interests & Venues <br><br>\n",
+    "    Data Analysis of London</b></p>\n",
     "<br><br>\n",
     "\n",
     "\n"
