--- a/Capstone_BattleOfNeighborhoods_05Presentation.ipynb
+++ b/Capstone_BattleOfNeighborhoods_05Presentation.ipynb
@@ -20,10 +20,9 @@
    "metadata": {},
    "source": [
     "<br><br><a name=\"methodology\"></a><hr><br>\n",
-    "<p style=\"text-align:center;\"><b>Optimum points of interests & Venues <br><br>\n",
-    "    Data Analysis of London</b></p>\n",
     "<br><br>\n",
-    "\n",
+    "# Optimum points of interests & Venues\n",
+    "# Data Analysis of London\n",
     "\n"
    ]
   },
